Bevel: strange flickering on big meshes #38936

Closed
opened 2014-03-03 22:04:46 +01:00 by Yaniv Gershoni · 8 comments

System Information
Windows7 64bit, nvidia gtx680m

Blender Version
Broken: 2.69.11 "e60fb0f"
Worked: Official, and 2.69.11 "01645cc"

The Bevel tool don't work smooth as before and make some jumps and wrong results.

Open Blender, Load factory settings, Scale the Default Cube by 20, Apply the scale.
Edit Mode: select one edge (or two, don't select all) and press Ctrl+B, move with the mouse and see the results.
it also occur on the Bevel Modifier if you use it with Vertex Group.

**System Information** Windows7 64bit, nvidia gtx680m **Blender Version** Broken: 2.69.11 "e60fb0f" Worked: Official, and 2.69.11 "01645cc" The Bevel tool don't work smooth as before and make some jumps and wrong results. Open Blender, Load factory settings, Scale the Default Cube by 20, Apply the scale. Edit Mode: select one edge (or two, don't select all) and press Ctrl+B, move with the mouse and see the results. it also occur on the Bevel Modifier if you use it with Vertex Group.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YanivGershoni

Added subscriber: @YanivGershoni
Howard Trickey was assigned by Bastien Montagne 2014-03-03 22:26:02 +01:00

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne changed title from Bevel tool do wierd things to Bevel: strange flickering on big meshes 2014-03-03 22:26:50 +01:00

This issue was referenced by blender/blender-addons-contrib@37ef7f3537

This issue was referenced by blender/blender-addons-contrib@37ef7f35375dae01ad8fa2e399f2663b35bc9665

This issue was referenced by 37ef7f3537

This issue was referenced by 37ef7f35375dae01ad8fa2e399f2663b35bc9665
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 37ef7f3537.

Closed by commit 37ef7f3537.
Member

Fixed with commit 37ef7f3537
Thanks for the report!

Fixed with commit 37ef7f3537 Thanks for the report!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38936
No description provided.