Fix T38936 Bevel strange flickering on big meshes.

Last change to bevel had a check for what was supposed
to be an "on edge" new vertex being off the edge.
The test tolerance was too small. This fixes that.